--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "nyc": "^13.3.0",
     "postcss-import": "^12.0.1",
     "pug": "^2.0.3",
+    "rdtsc": "^1.3.1",
     "rollup": "^1.2.2",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.0",
