--- a/package.json
+++ b/package.json
@@ -109,9 +109,9 @@
     "postcss-import": "^12.0.1",
     "pug": "^2.0.3",
     "rdtsc": "^1.3.1",
-    "rollup": "^1.2.2",
+    "rollup": "^1.7.3",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-commonjs": "^9.2.2",
     "rollup-plugin-eslint": "^5.0.0",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-node-resolve": "^4.0.0",
@@ -124,6 +124,6 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "@babel/runtime": "^7.3.1"
+    "@babel/runtime": "7.3.4"
   }
 }
