Configured TypeScript environment

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
@@ -62,6 +63,7 @@
     "@babel/plugin-transform-parameters": "^7.3.3",
     "@babel/plugin-transform-regenerator": "^7.3.4",
     "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/plugin-transform-typescript": "^7.4.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.0.0",
@@ -119,12 +121,14 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-prettier": "^0.6.0",
     "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript": "^1.0.1",
     "rollup-pluginutils": "^2.4.1",
     "shx": "^0.3.2",
     "tslint": "^5.14.0",
     "tslint-clean-code": "^0.2.9",
     "tslint-consistent-codestyle": "^1.15.1",
     "tslint-sonarts": "^1.9.0",
+    "typescript": "^3.3.4000",
     "zip-dir": "^1.0.2"
   },
   "dependencies": {
