--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-	"target": "es6",
-	"lib": ["es2015", "es2017", "es2018", "dom"]
+	"target": "ESNext",
+	"lib": ["es2015", "es2017", "es2018", "dom"],
+	"emitDecoratorMetadata": true,
+	"experimentalDecorators": true,
+	"strictNullChecks": true,
+	"strictPropertyInitialization": true
   }
 }
