--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,6 @@
 	"target": "ESNext",
 	"lib": ["es2015", "es2017", "es2018", "dom"],
 	"emitDecoratorMetadata": true,
-	"experimentalDecorators": true,
-	"strictNullChecks": true,
-	"strictPropertyInitialization": true
+	"experimentalDecorators": true
   }
 }
