--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 	"target": "ESNext",
 	"lib": ["es2015", "es2017", "es2018", "dom"],
 	"emitDecoratorMetadata": true,
-	"experimentalDecorators": true
+	"experimentalDecorators": true,
+	"stripInternal": true
   }
 }
