--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,6 +1,9 @@
 {
     "include": [
-        "{src,dist/{js,mjs}}/{main,test/**/src}/**/*{.es6,.es,.js,.mjs,.ts}"
+        "{src,dist/{js,mjs}}/{main,test/**/src}/**/*"
+    ],
+    "extension": [
+        ".es6", ".es", ".js", ".mjs", ".ts"
     ],
     "reporter": [
         "json"
