--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "watch:karma": "karma start env/karma/karma.conf.tests.js --auto-watch",
     "perf:karma": "karma start env/karma/karma.conf.performance.js",
     "test:coverage": "npm run test:mocha:src && npm run test:mocha:mjs && npm run test:mocha:js",
-    "test:dev": "mocha --opts ./env/mocha/mocha.babel.opts \"./src/test/tests/{node,common}/**/*.*\" --grep \"^common > main > lists > SortedList indexOf$\"",
+    "test:dev": "mocha --opts ./env/mocha/mocha.babel.opts \"./src/test/tests/{node,common}/**/*.*\" --grep \"^common > main > lists > List \"",
     "coverage:dev": "shx rm -rf tmp/coerage && nyc npm run test:dev && npm run coverage:merge && \"tmp/coverage/all/lcov/lcov-report/index.html\"",
     "coverage:mocha": "nyc npm run test:coverage",
     "coverage:karma": "karma start env/karma/karma.conf.coverage.js",
