SortedList completed and fully tested (28512 test cases)

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "precommit": "npm run test:all:coverage",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test:all",
-    "build:mjs": "shx rm -rf dist/mjs/ && shx mkdir -p dist/mjs/ && shx cp -rf src/test dist/mjs/ && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/mjs/ --no-babelrc --config-file ./.babelrc-mjs.js",
-    "build:js": "shx rm -rf dist/js/ && shx mkdir -p dist/js/ && shx cp -rf src/test dist/js/  && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/js/ --no-babelrc --config-file ./.babelrc-js.js",
+    "build:mjs": "shx rm -rf dist/mjs/ && shx mkdir -p dist/mjs/ && shx cp -rf src/test dist/mjs/ && shx rm -rf dist/mjs/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/mjs/ --no-babelrc --config-file ./.babelrc-mjs.js",
+    "build:js": "shx rm -rf dist/js/ && shx mkdir -p dist/js/ && shx cp -rf src/test dist/js/ && shx rm -rf dist/js/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/js/ --no-babelrc --config-file ./.babelrc-js.js",
     "build:polyfill": "node env/polyfill/build.js",
     "build": "npm run build:mjs && npm run build:js",
     "lint": "eslint --plugin markdown --ext js,md .",
