Removed windows platform from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ matrix:
 #    - name: "browsers osx"
 #      os: "osx"
 #      node_js: "11.5.0"
-    - name: "browsers windows & node old"
-      os: "windows"
-      node_js: "10.9.0"
+#    - name: "browsers windows & node old"
+#      os: "windows"
+#      node_js: "10.9.0"
 #    - name: "node old"
 #      os: "osx"
 #      node_js: "10.9.0"
