RuleBuilder and RuleSubscribe is completed and fully tested

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "build:js": "shx rm -rf dist/js/ && shx mkdir -p dist/js/ && shx cp -rf src/test dist/js/ && shx rm -rf dist/js/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/js/ --no-babelrc --config-file ./.babelrc-js.js",
     "build:polyfill": "node env/polyfill/build.js",
     "build": "npm run build:mjs && npm run build:js",
-    "lint": "eslint --plugin markdown --ext js,md .",
+    "lint:es": "eslint --plugin markdown --ext js,md .",
+    "lint:ts": "tslint --project tsconfig.json --config tslint.json --exclude **/_trash/** src/main/**/*.ts",
+    "lint": "npm run lint:es && npm run lint:ts",
     "test:mocha:src": "mocha --opts ./env/mocha/mocha.babel.opts \"./src/test/tests/{node,common}/**/*.*\"",
     "test:mocha:mjs": "mocha --opts ./env/mocha/mocha.babel.opts \"./dist/mjs/test/tests/{node,common}/**/*.*\"",
     "test:mocha:js": "mocha --opts ./env/mocha/mocha.opts \"./dist/js/test/tests/{node,common}/**/*.*\"",
