--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@theintern/leadfoot": "^2.2.6",
     "autoprefixer": "^9.4.9",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-ts-nameof": "^0.1.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "cssnano": "^4.1.10",
