--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "express": "^4.16.4",
+    "fast-equals": "^2.0.0",
     "fs-extra": "^7.0.1",
     "globby": "^9.0.0",
     "intern": "^4.4.1",
