--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "needle": "^2.2.4",
     "node-sass": "^4.11.0",
     "nyc": "^13.3.0",
+    "pirates": "^4.0.1",
     "postcss-import": "^12.0.1",
     "pug": "^2.0.3",
     "rdtsc": "^1.3.1",
