--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 	"lib": ["es2015", "es2017", "es2018", "dom"],
 	"emitDecoratorMetadata": true,
 	"experimentalDecorators": true,
-	"stripInternal": true
+	"stripInternal": true,
+	"moduleResolution": "node"
   }
 }
