--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "@babel/runtime": "7.3.4"
+    "@babel/runtime": "7.3.4",
+    "synchronous-promise": "^2.0.9"
   }
 }
