--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "babel-plugin-ts-nameof": "^0.1.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "clone": "^2.1.2",
+    "clones": "^1.2.0",
     "cssnano": "^4.1.10",
     "eslint": "^5.14.1",
     "eslint-config-pro": "0.0.4",
