Updated npm packages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TODO",
+  "name": "tree-state-manager",
   "version": "0.0.1",
   "description": "TODO",
   "author": "TODO",
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "clean": "shx rm -rf {dist,tmp,__sapper__,*.log}",
-    "precommit": "npm run test:all:coverage",
+    "precommit": "npm update && npm run test:all:coverage",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test:all",
     "build:mjs": "shx rm -rf dist/mjs/ && shx mkdir -p dist/mjs/ && shx cp -rf src/test dist/mjs/ && shx rm -rf dist/mjs/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/mjs/ --no-babelrc --config-file ./.babelrc-mjs.js",
@@ -55,95 +55,95 @@
     "ci": "npm run lint && npm run coverage:ci && ncat \"tmp/coverage/all/lcov/**/lcov.info\" --banner \"\" | coveralls"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-async-to-generator": "^7.2.0",
-    "@babel/plugin-transform-for-of": "^7.2.0",
-    "@babel/plugin-transform-parameters": "^7.3.3",
-    "@babel/plugin-transform-regenerator": "^7.3.4",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/plugin-transform-typescript": "^7.4.0",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/plugin-transform-async-to-generator": "^7.5.0",
+    "@babel/plugin-transform-for-of": "^7.4.4",
+    "@babel/plugin-transform-parameters": "^7.4.4",
+    "@babel/plugin-transform-regenerator": "^7.4.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/plugin-transform-typescript": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
-    "@babel/register": "^7.0.0",
+    "@babel/register": "^7.5.5",
     "@metahub/karma-rollup-preprocessor": "^4.1.0",
-    "@theintern/leadfoot": "^2.2.6",
-    "autoprefixer": "^9.4.9",
-    "babel-eslint": "^10.0.1",
+    "@theintern/leadfoot": "^2.2.12",
+    "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.0.2",
     "babel-plugin-ts-nameof": "^0.1.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "clone": "^2.1.2",
     "clones": "^1.2.0",
     "cssnano": "^4.1.10",
-    "eslint": "^5.14.1",
+    "eslint": "^5.16.0",
     "eslint-config-pro": "0.0.4",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-html": "^5.0.3",
-    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-html": "^5.0.5",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-markdown": "^1.0.0",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "fast-copy": "^2.0.3",
     "fast-equals": "^2.0.0",
     "fs-extra": "^7.0.1",
-    "globby": "^9.0.0",
-    "intern": "^4.4.1",
+    "globby": "^9.2.0",
+    "intern": "^4.4.3",
     "istanbul-combine": "^0.3.0",
     "json5": "^2.1.0",
-    "karma": "^4.0.0",
-    "karma-browserstack-launcher": "^1.5.0",
+    "karma": "^4.2.0",
+    "karma-browserstack-launcher": "^1.5.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-detect-browsers": "^2.3.3",
     "karma-edge-launcher": "^0.4.2",
-    "karma-firefox-launcher": "^1.1.0",
+    "karma-firefox-launcher": "^1.2.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-opera-launcher": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-rollup-preprocessor": "^7.0.0",
+    "karma-rollup-preprocessor": "^7.0.2",
     "karma-safari-launcher": "^1.0.0",
     "karma-safaritechpreview-launcher": "^2.0.2",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "mocha": "^5.2.0",
-    "ncat": "^2.0.5",
-    "needle": "^2.2.4",
-    "node-sass": "^4.11.0",
+    "ncat": "^2.0.7",
+    "needle": "^2.4.0",
+    "node-sass": "^4.12.0",
     "nyc": "^13.3.0",
     "pirates": "^4.0.1",
     "postcss-import": "^12.0.1",
-    "pug": "^2.0.3",
+    "pug": "^2.0.4",
     "rdtsc": "^1.3.1",
-    "rollup": "^1.7.3",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.2",
+    "rollup": "^1.19.4",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-eslint": "^5.0.0",
     "rollup-plugin-istanbul": "^2.0.1",
-    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-node-resolve": "^4.2.4",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-prettier": "^0.6.0",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript": "^1.0.1",
-    "rollup-pluginutils": "^2.4.1",
+    "rollup-pluginutils": "^2.8.1",
     "shx": "^0.3.2",
-    "tslint": "^5.14.0",
+    "tslint": "^5.18.0",
     "tslint-clean-code": "^0.2.9",
     "tslint-consistent-codestyle": "^1.15.1",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-sonarts": "^1.9.0",
-    "typescript": "^3.3.4000",
+    "typescript": "^3.5.3",
     "zip-dir": "^1.0.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
+    "@babel/polyfill": "^7.4.4",
     "@babel/runtime": "7.3.4",
     "synchronous-promise": "^2.0.9"
   }
