--- a/package.json
+++ b/package.json
@@ -75,32 +75,32 @@
     "@theintern/leadfoot": "^2.2.12",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.2",
-    "babel-plugin-ts-nameof": "^0.1.4",
+    "babel-plugin-ts-nameof": "^0.3.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "clone": "^2.1.2",
     "clones": "^1.2.0",
     "cssnano": "^4.1.10",
-    "eslint": "^5.16.0",
+    "eslint": "^6.1.0",
     "eslint-config-pro": "0.0.4",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-html": "^5.0.5",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-markdown": "^1.0.0",
-    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "express": "^4.17.1",
     "fast-copy": "^2.0.3",
     "fast-equals": "^2.0.0",
-    "fs-extra": "^7.0.1",
-    "globby": "^9.2.0",
+    "fs-extra": "^8.1.0",
+    "globby": "^10.0.1",
     "intern": "^4.4.3",
     "istanbul-combine": "^0.3.0",
     "json5": "^2.1.0",
     "karma": "^4.2.0",
     "karma-browserstack-launcher": "^1.5.1",
-    "karma-chrome-launcher": "^2.2.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^1.1.2",
     "karma-detect-browsers": "^2.3.3",
     "karma-edge-launcher": "^0.4.2",
@@ -117,23 +117,24 @@
     "ncat": "^2.0.7",
     "needle": "^2.4.0",
     "node-sass": "^4.12.0",
-    "nyc": "^13.3.0",
+    "nyc": "^14.1.1",
     "pirates": "^4.0.1",
     "postcss-import": "^12.0.1",
     "pug": "^2.0.4",
     "rdtsc": "^1.3.1",
     "rollup": "^1.19.4",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-eslint": "^5.0.0",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-istanbul": "^2.0.1",
-    "rollup-plugin-node-resolve": "^4.2.4",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-prettier": "^0.6.0",
-    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-terser": "^5.1.1",
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-pluginutils": "^2.8.1",
     "shx": "^0.3.2",
+    "synchronous-promise": "^2.0.9",
     "tslint": "^5.18.0",
     "tslint-clean-code": "^0.2.9",
     "tslint-consistent-codestyle": "^1.15.1",
@@ -144,7 +145,6 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "@babel/runtime": "7.3.4",
-    "synchronous-promise": "^2.0.9"
+    "@babel/runtime": "^7.3.4"
   }
 }
