--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "clone": "^2.1.2",
     "clones": "^1.2.0",
     "cssnano": "^4.1.10",
-    "eslint": "^6.1.0",
+    "eslint": "6.1.0",
     "eslint-config-pro": "0.0.4",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-html": "^6.0.0",
@@ -89,7 +89,7 @@
     "eslint-plugin-markdown": "^1.0.0",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-standard": "^4.0.1",
     "express": "^4.17.1",
     "fast-copy": "^2.0.3",
     "fast-equals": "^2.0.0",
