--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
   "main": "src/main/browser/index.ts",
   "jsnext:main": "src/main/browser/index.ts",
   "module": "src/main/browser/index.ts",
+  "browser": "src/main/browser/index.ts",
   "engines": {
     "node": ">= 8.6.0"
   },
   "scripts": {
     "clean": "shx rm -rf {dist,tmp,__sapper__,*.log}",
-    "precommit": "npm update && npm run test:all:coverage",
+    "npm-check": "depcheck --ignores=\"@babel/*,@metahub/karma-rollup-preprocessor,karma-*,eslint-plugin-markdown,tslint-eslint-rules\" --ignore-dirs=_trash,dist,docs,tmp",
+    "precommit": "npm run npm-check && npm update && npm run test:all:coverage",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test:all",
-    "build:mjs": "shx rm -rf dist/mjs/ && shx mkdir -p dist/mjs/ && shx cp -rf src/test dist/mjs/ && shx rm -rf dist/mjs/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/mjs/ --no-babelrc --config-file ./.babelrc-mjs.js",
-    "build:js": "shx rm -rf dist/js/ && shx mkdir -p dist/js/ && shx cp -rf src/test dist/js/ && shx rm -rf dist/js/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/js/ --no-babelrc --config-file ./.babelrc-js.js",
+    "build:mjs": "shx rm -rf dist/mjs/ && shx mkdir -p dist/mjs/ && shx cp -rf src/test dist/mjs/ && shx rm -rf dist/mjs/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/mjs/ --no-babelrc --config-file ./env/babel/.babelrc-dist-mjs.js",
+    "build:js": "shx rm -rf dist/js/ && shx mkdir -p dist/js/ && shx cp -rf src/test dist/js/ && shx rm -rf dist/js/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/js/ --no-babelrc --config-file ./env/babel/.babelrc-dist-js.js",
     "build:polyfill": "node env/polyfill/build.js",
     "build": "npm run build:mjs && npm run build:js",
     "lint:es": "eslint --plugin markdown --ext js,md .",
@@ -59,6 +61,8 @@
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
+    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
@@ -71,33 +75,23 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.5.5",
+    "@babel/runtime-corejs3": "^7.5.5",
     "@metahub/karma-rollup-preprocessor": "^4.1.0",
     "@theintern/leadfoot": "^2.2.12",
-    "autoprefixer": "^9.6.1",
+    "assertion-error": "^1.1.0",
     "babel-eslint": "^10.0.3",
-    "babel-plugin-ts-nameof": "^0.3.0",
     "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "clone": "^2.1.2",
-    "clones": "^1.2.0",
-    "cssnano": "^4.1.10",
+    "core-js-pure": "^3.2.1",
+    "depcheck": "^0.8.3",
     "eslint": "6.1.0",
     "eslint-config-pro": "0.0.4",
-    "eslint-config-standard": "^13.0.1",
     "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-markdown": "^1.0.0",
     "eslint-plugin-node": "^9.2.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
     "express": "^4.17.1",
-    "fast-copy": "^2.0.3",
-    "fast-equals": "^2.0.0",
     "fs-extra": "^8.1.0",
     "globby": "^10.0.1",
-    "intern": "^4.4.3",
     "istanbul-combine": "^0.3.0",
-    "json5": "^2.1.0",
     "karma": "^4.3.0",
     "karma-browserstack-launcher": "^1.5.1",
     "karma-chrome-launcher": "^3.1.0",
@@ -115,23 +109,16 @@
     "lodash": "^4.17.15",
     "mocha": "^5.2.0",
     "ncat": "^2.0.7",
-    "needle": "^2.4.0",
-    "node-sass": "^4.12.0",
     "nyc": "^14.1.1",
-    "pirates": "^4.0.1",
-    "postcss-import": "^12.0.1",
-    "pug": "^2.0.4",
     "rdtsc": "^1.3.1",
+    "regenerator-runtime": "^0.13.3",
     "rollup": "^1.20.3",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-prettier": "^0.6.0",
     "rollup-plugin-terser": "^5.1.1",
-    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-typescript2": "^0.24.0",
     "rollup-pluginutils": "^2.8.1",
     "shx": "^0.3.2",
     "synchronous-promise": "^2.0.9",
@@ -140,11 +127,13 @@
     "tslint-consistent-codestyle": "^1.15.1",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-sonarts": "^1.9.0",
-    "typescript": "^3.6.2",
-    "zip-dir": "^1.0.2"
+    "typescript": "^3.6.2"
   },
-  "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "@babel/runtime": "7.3.4"
-  }
+  "peerDependencies": {
+    "@babel/runtime-corejs3": "^7.5.5",
+    "core-js-pure": "^3.2.1",
+    "regenerator-runtime": "^0.13.3",
+    "assertion-error": "^1.1.0"
+  },
+  "dependencies": {}
 }
