--- a/package.json
+++ b/package.json
@@ -75,13 +75,10 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.5.5",
-    "@babel/runtime-corejs3": "^7.5.5",
     "@metahub/karma-rollup-preprocessor": "^4.1.0",
     "@theintern/leadfoot": "^2.2.12",
-    "assertion-error": "^1.1.0",
     "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
-    "core-js-pure": "^3.2.1",
     "depcheck": "^0.8.3",
     "eslint": "6.1.0",
     "eslint-config-pro": "0.0.4",
@@ -111,7 +108,6 @@
     "ncat": "^2.0.7",
     "nyc": "^14.1.1",
     "rdtsc": "^1.3.1",
-    "regenerator-runtime": "^0.13.3",
     "rollup": "^1.20.3",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -135,5 +131,10 @@
     "regenerator-runtime": "^0.13.3",
     "assertion-error": "^1.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/runtime-corejs3": "^7.5.5",
+    "core-js-pure": "^3.2.1",
+    "regenerator-runtime": "^0.13.3",
+    "assertion-error": "^1.1.0"
+  }
 }
