--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "tslint-clean-code": "^0.2.9",
     "tslint-consistent-codestyle": "^1.15.1",
     "tslint-eslint-rules": "^5.4.0",
+    "tslint-no-circular-imports": "^0.7.0",
     "tslint-sonarts": "^1.9.0",
     "typescript": "^3.6.2"
   },
