--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "dist/**",
     "env/mocha/*"
   ],
-  "main": "src/main/browser/index.ts",
-  "jsnext:main": "src/main/browser/index.ts",
-  "module": "src/main/browser/index.ts",
-  "browser": "src/main/browser/index.ts",
+  "types": "dist/types/main/browser/index.d.ts",
+  "main": "dist/js/main/browser/index.js",
+  "jsnext:main": "dist/mjs/main/browser/index.js",
+  "module": "dist/mjs/main/browser/index.js",
+  "browser": "dist/mjs/main/browser/index.js",
   "engines": {
     "node": ">= 8.6.0"
   },
@@ -26,10 +27,11 @@
     "precommit": "npm run npm-check && npm update && npm run test:all:coverage",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test:all",
-    "build:mjs": "shx rm -rf dist/mjs/ && shx mkdir -p dist/mjs/ && shx cp -rf src/test dist/mjs/ && shx rm -rf dist/mjs/**/*.ts && tsc --outDir dist/mjs/main && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/mjs/ --no-babelrc --config-file ./env/babel/.babelrc-dist-mjs.js",
-    "build:js": "shx rm -rf dist/js/ && shx mkdir -p dist/js/ && shx cp -rf src/test dist/js/ && shx rm -rf dist/js/**/*.ts && tsc --outDir dist/js/main && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/js/ --no-babelrc --config-file ./env/babel/.babelrc-dist-js.js",
+    "build:types": "shx rm -rf dist/types/ && shx mkdir -p dist/types/ && tsc --outDir dist/types",
+    "build:mjs": "shx rm -rf dist/mjs/ && shx mkdir -p dist/mjs/ && shx cp -rf src/test dist/mjs/ && shx rm -rf dist/mjs/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/mjs/ --no-babelrc --config-file ./env/babel/.babelrc-dist-mjs.js",
+    "build:js": "shx rm -rf dist/js/ && shx mkdir -p dist/js/ && shx cp -rf src/test dist/js/ && shx rm -rf dist/js/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/js/ --no-babelrc --config-file ./env/babel/.babelrc-dist-js.js",
     "build:polyfill": "node env/polyfill/build.js",
-    "build": "npm run build:mjs && npm run build:js",
+    "build": "npm run build:types && npm run build:mjs && npm run build:js",
     "lint:es": "eslint --plugin markdown --ext js,md .",
     "lint:ts": "tslint --project tsconfig.json --config tslint.json --exclude **/_trash/** src/main/**/*.ts",
     "lint": "npm run lint:es && npm run lint:ts",
