Disabled Babel loose for classes. Build OK.

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-async-to-generator": "^7.5.0",
+    "@babel/plugin-transform-classes": "^7.5.5",
     "@babel/plugin-transform-for-of": "^7.4.4",
     "@babel/plugin-transform-parameters": "^7.4.4",
     "@babel/plugin-transform-regenerator": "^7.4.5",
@@ -82,6 +83,7 @@
     "assertion-error": "^1.1.0",
     "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
+    "core-js": "^3.2.1",
     "core-js-pure": "^3.2.1",
     "depcheck": "^0.8.3",
     "eslint": "6.1.0",
