--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "clean": "shx rm -rf {dist,tmp,__sapper__,*.log}",
-    "npm:dep": "depcheck --ignores=\"@babel/*,@metahub/karma-rollup-preprocessor,karma-*,eslint-plugin-markdown,tslint-eslint-rules\" --ignore-dirs=_trash,dist,docs,tmp",
+    "npm:dep": "depcheck --ignores=\"@babel/*,@metahub/karma-rollup-preprocessor,karma-*,eslint-plugin-markdown,tslint-eslint-rules,electron\" --ignore-dirs=_trash,dist,docs,tmp",
     "npm:check": "npm run npm:dep",
     "precommit": "npm run npm:check && npm update && npm run test:all:coverage",
     "prepare": "npm run build",
@@ -60,11 +60,11 @@
     "ci": "npm run lint && npm run coverage:ci && ncat \"tmp/coverage/all/lcov/**/lcov.info\" --banner \"\" | coveralls"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-async-to-generator": "^7.5.0",
@@ -72,12 +72,12 @@
     "@babel/plugin-transform-for-of": "^7.4.4",
     "@babel/plugin-transform-parameters": "^7.4.4",
     "@babel/plugin-transform-regenerator": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/plugin-transform-typescript": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.3.3",
-    "@babel/register": "^7.5.5",
-    "@babel/runtime-corejs3": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "@babel/plugin-transform-typescript": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-typescript": "^7.6.0",
+    "@babel/register": "^7.6.0",
+    "@babel/runtime-corejs3": "^7.6.0",
     "@metahub/karma-rollup-preprocessor": "^4.1.0",
     "@theintern/leadfoot": "^2.2.12",
     "assertion-error": "^1.1.0",
@@ -86,6 +86,7 @@
     "core-js": "^3.2.1",
     "core-js-pure": "^3.2.1",
     "depcheck": "^0.8.3",
+    "electron": "^6.0.7",
     "eslint": "6.1.0",
     "eslint-config-pro": "0.0.4",
     "eslint-plugin-html": "^6.0.0",
@@ -101,6 +102,7 @@
     "karma-coverage": "^1.1.2",
     "karma-detect-browsers": "^2.3.3",
     "karma-edge-launcher": "^0.4.2",
+    "karma-electron": "^6.3.0",
     "karma-firefox-launcher": "^1.2.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
