Directory structure refactoring

--- a/package.json
+++ b/package.json
@@ -29,34 +29,34 @@
     "prepare": "npm run build",
     "prepublishOnly": "npm run test:all",
     "build:types": "shx rm -rf dist/types/ && shx mkdir -p dist/types/ && tsc --outDir dist/types",
-    "build:mjs": "shx rm -rf dist/mjs/ && shx mkdir -p dist/mjs/ && shx cp -rf src/test dist/mjs/ && shx rm -rf dist/mjs/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/mjs/ --no-babelrc --config-file ./env/babel/.babelrc-dist-mjs.js",
-    "build:js": "shx rm -rf dist/js/ && shx mkdir -p dist/js/ && shx cp -rf src/test dist/js/ && shx rm -rf dist/js/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/js/ --no-babelrc --config-file ./env/babel/.babelrc-dist-js.js",
+    "build:mjs": "shx rm -rf dist/mjs/ && shx mkdir -p dist/mjs/ && shx cp -rf src/test dist/mjs/ && shx rm -rf dist/mjs/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/mjs/ --no-babelrc --config-file ./env/babel/configs/dist-mjs.js",
+    "build:js": "shx rm -rf dist/js/ && shx mkdir -p dist/js/ && shx cp -rf src/test dist/js/ && shx rm -rf dist/js/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/js/ --no-babelrc --config-file ./env/babel/configs/dist-js.js",
     "build:polyfill": "node env/polyfill/build.js",
     "build": "npm run build:types && npm run build:mjs && npm run build:js",
     "lint:es": "eslint --plugin markdown --ext js,md .",
     "lint:ts": "tslint --project tsconfig.json --config tslint.json --exclude **/_trash/** src/main/**/*.ts",
     "lint": "npm run lint:es && npm run lint:ts",
-    "test:mocha:src": "mocha --opts ./env/mocha/mocha.babel.opts \"./src/test/tests/{node,common}/**/*.*\"",
-    "test:mocha:mjs": "mocha --opts ./env/mocha/mocha.babel.opts \"./dist/mjs/test/tests/{node,common}/**/*.*\"",
-    "test:mocha:js": "mocha --opts ./env/mocha/mocha.opts \"./dist/js/test/tests/{node,common}/**/*.*\"",
-    "test:karma": "karma start env/karma/karma.conf.tests.js",
-    "test:intern": "echo mocha --opts ./env/mocha/mocha.babel.opts ./env/intern/mocha-export.js",
+    "test:mocha:src": "mocha --opts ./env/mocha/configs/babel/mocha.opts \"./src/test/tests/{node,common}/**/*.*\"",
+    "test:mocha:mjs": "mocha --opts ./env/mocha/configs/babel/mocha.opts \"./dist/mjs/test/tests/{node,common}/**/*.*\"",
+    "test:mocha:js": "mocha --opts ./env/mocha/configs/no-babel/mocha.opts \"./dist/js/test/tests/{node,common}/**/*.*\"",
+    "test:karma": "karma start ./env/karma/configs/tests.js",
+    "test:intern": "echo mocha --opts ./env/mocha/configs/babel/mocha.opts ./env/intern/mocha-export.js",
     "test": "npm run test:mocha:mjs && npm run test:mocha:js",
     "test:all": "npm run lint && npm run clean && npm run test:mocha:src && npm run build && npm run test:mocha:mjs && npm run test:mocha:js",
     "test:all:coverage": "npm run lint && npm run clean && npm run build && npm run coverage && nyc check-coverage --report-dir tmp/coverage/all/lcov --lines 100 --functions 100 --branches 100",
-    "watch:mocha": "mocha --opts ./env/mocha/mocha.babel.opts \"./src/test/tests/{node,common}/**/*.*\" --watch",
-    "perf:mocha": "mocha --opts ./env/mocha/mocha.babel.opts \"./src/test/performance/{node,common}/**/*.*\"",
-    "watch:karma": "karma start env/karma/karma.conf.tests.js --auto-watch",
-    "perf:karma": "karma start env/karma/karma.conf.performance.js",
+    "watch:mocha": "mocha --opts ./env/mocha/configs/babel/mocha.opts \"./src/test/tests/{node,common}/**/*.*\" --watch",
+    "perf:mocha": "mocha --opts ./env/mocha/configs/babel/mocha.opts \"./src/test/performance/{node,common}/**/*.*\"",
+    "watch:karma": "karma start ./env/karma/configs/tests.js --auto-watch",
+    "perf:karma": "karma start ./env/karma/configs/performance.js",
     "test:coverage": "npm run test:mocha:src && npm run test:mocha:mjs && npm run test:mocha:js",
-    "test:dev": "mocha --opts ./env/mocha/mocha.babel.opts \"./src/test/tests/{node,common}/**/*.*\" --grep \"^common > main > rx\"",
+    "test:dev": "mocha --opts ./env/mocha/configs/babel/mocha.opts \"./src/test/tests/{node,common}/**/*.*\" --grep \"^common > main > rx\"",
     "coverage:dev": "shx rm -rf tmp/coerage && nyc npm run test:dev && npm run coverage:merge && \"tmp/coverage/all/lcov/lcov-report/index.html\"",
     "coverage:mocha": "nyc npm run test:coverage",
-    "coverage:karma": "karma start env/karma/karma.conf.coverage.js",
+    "coverage:karma": "karma start ./env/karma/configs/coverage.js",
     "coverage": "npm run coverage:mocha && npm run coverage:karma && npm run test:intern && npm run coverage:merge",
     "coverage:ci": "npm run coverage:mocha && npm run ci:karma && npm run coverage:merge",
     "coverage:merge": "istanbul-combine -d tmp/coverage/all/lcov -p summary -r lcov \"tmp/coverage/*/json/**.json\"",
-    "ci:karma": "karma start env/karma/karma.conf.ci.js",
+    "ci:karma": "karma start ./env/karma/configs/ci.js",
     "ci": "npm run lint && npm run coverage:ci && ncat \"tmp/coverage/all/lcov/**/lcov.info\" --banner \"\" | coveralls"
   },
   "devDependencies": {
