Lint fixes. Tests OK.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "clean": "shx rm -rf {dist,tmp,__sapper__,*.log}",
-    "npm:dep": "depcheck --ignores=\"@babel/*,@metahub/karma-rollup-preprocessor,karma-*,eslint-plugin-markdown,tslint-eslint-rules,electron\" --ignore-dirs=_trash,dist,docs,tmp",
+    "npm:dep": "depcheck --ignores=\"@types/*,@babel/*,@metahub/karma-rollup-preprocessor,karma-*,eslint-plugin-markdown,tslint-eslint-rules,electron\" --ignore-dirs=_trash,dist,docs,tmp",
     "npm:check": "npm run npm:dep",
     "precommit": "npm run npm:check && npm update && npm run test:all:coverage",
     "prepare": "npm run build",
@@ -87,7 +87,7 @@
     "core-js": "^3.2.1",
     "core-js-pure": "^3.2.1",
     "depcheck": "^0.8.3",
-    "electron": "^6.0.7",
+    "electron": "^6.0.10",
     "eslint": "6.1.0",
     "eslint-config-pro": "^0.0.4",
     "eslint-plugin-html": "^6.0.0",
@@ -118,18 +118,18 @@
     "nyc": "^14.1.1",
     "rdtsc": "^2.0.0",
     "regenerator-runtime": "^0.13.3",
-    "rollup": "^1.21.0",
+    "rollup": "^1.21.4",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.1",
-    "rollup-pluginutils": "^2.8.1",
+    "rollup-plugin-terser": "^5.1.2",
+    "rollup-pluginutils": "^2.8.2",
     "shx": "^0.3.2",
     "synchronous-promise": "^2.0.10",
-    "tslint": "^5.19.0",
-    "tslint-clean-code": "^0.2.9",
-    "tslint-consistent-codestyle": "^1.15.1",
+    "tslint": "^5.20.0",
+    "tslint-clean-code": "^0.2.10",
+    "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-no-circular-imports": "^0.7.0",
     "tslint-sonarts": "^1.9.0",
