--- a/package.json
+++ b/package.json
@@ -132,7 +132,8 @@
     "tslint-eslint-rules": "^5.4.0",
     "tslint-no-circular-imports": "^0.7.0",
     "tslint-sonarts": "^1.9.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "immutable": "^4.0.0-rc.12"
   },
   "peerDependencies": {
     "@babel/runtime-corejs3": "^7.5.5",
